--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postinstall": "npm run build",
+    "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -10,6 +12,8 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.6.5",
+    "express": "^4.18.2",
+    "serve-static": "^1.15.0",
     "vue": "^3.0.0",
     "vue-axios": "^3.5.1",
     "vue-router": "^4.1.6"
