--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "tp1",
+  "name": "movie-verse",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "npm run build",
-    "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "npm run build",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.6.5",
     "express": "^4.18.2",
+    "html-webpack-plugin": "^5.5.0",
+    "register-service-worker": "^1.7.1",
     "serve-static": "^1.15.0",
     "vue": "^3.0.0",
     "vue-axios": "^3.5.1",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-pwa": "^5.0.8",
     "@vue/cli-plugin-router": "~4.5.15",
     "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.0.0",
